--- a/src/app/main/estimate/components/facesheet/facesheet.component.html
+++ b/src/app/main/estimate/components/facesheet/facesheet.component.html
@@ -140,41 +140,37 @@
       </div>
     </div>
 
-    <div fxLayout="row" fxLayoutAlign="end">
-      <div fxFlex="40">
+    <div class="text1" fxLayout="row" fxLayoutAlign="end">
+      <div fxFlex="45" >
         <p>( นางสาวนุชจนาถ ชูบัว )</p>
         <p class="pl-20">
           ผปผ.ลธ.
         </p>
       </div>
     </div>
+
     <div fxLayout="row" fxLayoutAlign="center">
-      <div fxFlex="20" fxLayoutAlign="end">
-        <p>ผ่าน</p>
+      <div fxFlex="20" >
+        <p class="pl-20">ผ่าน</p>
       </div>
-      <div fxFlex="60" fxLayoutAlign="center">
-        <p>อนุมัติ</p>
+      <div fxFlex="10" >
+        <p class="pl-20">อนุมัติ</p>
       </div>
     </div>
 
+
+
+
     <div fxLayout="row" fxLayoutAlign="center">
-      <div fxFlex="30" >
+      <div fxFlex="20" >
         <p>( นางสาวยุคล นุมาศ )</p>
-        <p>ผอ.สลธ.</p>
+        <p class="pl-20">ผอ.สลธ.</p>
       </div>
-      <div fxFlex="30" >
+      <div fxFlex="10" >
         <p>( นายสมเกียรติ ประจำวงษ์ )</p>
-        <p>ลธน.</p>
+        <p class="pl-20">ลธน.</p>
       </div>
     </div>
-    <!-- <div fxLayout="row" fxLayoutAlign="center">
-      <div fxFlex="20" fxLayoutAlign="end">
-        <p>ผอ.สลธ.</p>
-      </div>
-      <div fxFlex="50" fxLayoutAlign="center">
-        <p>ลธน.</p>
-      </div>
-    </div> -->
   </div>
 
 
