--- a/src/app/main/proposal/list/proposalList.component.html
+++ b/src/app/main/proposal/list/proposalList.component.html
@@ -26,6 +26,13 @@
         </div>
       </div>
       <!-- / SEARCH -->
+
+      <div>
+        <button mat-fab color="accent" (click)="sendApprove()">
+          <mat-icon class="icon-position">send</mat-icon>
+        </button>
+      </div>
+
     </div>
     <!-- / HEADER -->
 
